force-app/main/default/objects/Onboarding_Step__c/Onboarding_Step__c.object-meta.xml
<CustomObject>
    <description>Tracks merchant onboarding steps for an Account.</description>
    <label>Onboarding Step</label>
    <nameField>
        <label>Onboarding Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>