force-app/main/default/objects/Onboarding_Step__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Merchant account this onboarding step belongs to.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Onboarding Steps</relationshipLabel>
    <relationshipName>Onboarding_Steps</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>