force-app/main/default/objects/Onboarding_Step__c/fields/Blocked_Reason__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Reason__c</fullName>
    <description>Reason this onboarding step is blocked or stalled.</description>
    <label>Blocked Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>