force-app/main/default/objects/Onboarding_Step__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Date the onboarding step was completed.</description>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>